@@ -1,3 +1,6 @@
+2011-08-22 Tamino Dauth <tamino@cdauth.eu>
+* blp: Fix writing of JPEG headers for other MIP maps which seem to have the size of the first (largest) one.
+
 2011-08-21 Tamino Dauth <tamino@cdauth.eu>
 * editor: Implement MIP map loading for class BlpCodec.
 * Using stringstream as buffer doesn't work as expected. Remove where possible and replace them by generic stream class of boost (check MPQ format, sector bug, using string streams)!!!
