@@ -1,3 +1,6 @@
+2011-08-22 Tamino Dauth <tamino@cdauth.eu>
+* blp: Improved JPEG writing.
+
 2011-08-21 Tamino Dauth <tamino@cdauth.eu>
 * editor: Fixed OGRE image loading (related classes are: editor::Texture and editor::BlpCodec).
 * blp: Fixed type usage for data streams.
